[project]
name = "dash-turtle-game"
version = "0.1.0"
description = "Turtle bot game using a Dash robot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "WonderPy @ git+https://github.com/axlan/WonderPy",
    "pygame",
    "paho-mqtt",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
dash-turtle-game = "dash_turtle_game.main:main"
